# pre-commit-hook-nitpick

./: .bumpversion.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  foo.toml  pyproject.toml  pytest.toml  script.py  try-repo.sh
.github/workflows/: pull-request.yaml  push.yaml
src/conformalize/: __init__.py  cli.py  constants.py  lib.py  settings.py
src/nitpick/: cli.py  lib.py
src/tests/: test_lib.py  test_main.py
